Correcting name of chunk for selecting non-distorted markers

--- a/vignettes/Inbred_Based_Populations.Rmd
+++ b/vignettes/Inbred_Based_Populations.Rmd
@@ -319,7 +319,7 @@ function `subset.chisq`:
 
 For having a list of distorted ones (none in this example):
 
-```{r, select_nondistorted}
+```{r, select_distorted}
 (distorted <- subset.chisq(f2.test, distorted=TRUE))
 ```
 
